--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "argon2": "^0.44.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2"
   },
